--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
 
     <!-- Thumbnail image/gif -->
-    <meta property="og:image" content="https://raw.githubusercontent.com/CrystalGreyDevelop/gift/main/media/OIG (3).gif">
+    <meta property="og:image" content="https://raw.githubusercontent.com/CrystalGreyDevelop/gift/main/media/OIG.gif">
     <meta property="og:type" content="video.other">
     
     <!-- Video Link -->
